--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 .card-title {
   color: hsl(223, 47%, 23%);
   text-align: center;
-  font-size: 1.2rem;
+  font-size: .8rem;
   font-weight: bold;
   padding: 30px 0 0 0;
 }
