--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body {
   width: 60%;
 }
 .cancel-button {
+  backgroud-color: transparent;
   border: none;
   color: hsl(224, 23%, 55%);
   cursor: pointer;
